[package]
name = "thndr"
version = "0.0.1"
edition = "2021"
description = "Highly modular Game Engine built in Rust"
readme = "README.md"
repository = "https://github.com/ThunderStudios/Thunder"
license = "MIT OR Apache-2.0"
keywords = ["game", "engine", "thunder", "graphics", "gamedev"]
categories = ["game-development", "graphics", "game-engines"]
exclude = ["crates/"]

[workspace]
members = ["crates/*"]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_docs = "warn"

[lints]
workspace = true

[dependencies]
