[package]
name = "thndr_core"
version = "0.1.0-dev"
edition = "2021"
description = "Thunder's core components"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ThunderStudios/Thunder"
keywords = ["game", "engine", "thunder", "graphics", "gamedev"]
categories = ["game-development", "graphics", "game-engines"]

[dependencies]
thndr_ecs = { path = "../thndr_ecs", version = "0.1.0-dev" }
thndr_app = { path = "../thndr_app", version = "0.1.0-dev" }
thndr_math = { path = "../thndr_math", version = "0.1.0-dev" }
thndr_transform = { path = "../thndr_transform", version = "0.1.0-dev" }
thndr_tracing = { path = "../thndr_tracing", version = "0.1.0-dev" }

[lints]
workspace = true
