[package]
name = "thndr_gpu"
version = "0.1.0-dev"
edition = "2021"
description = "Thunder GPU Abstraction Layer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ThunderStudios/Thunder"
keywords = ["game", "engine", "thunder", "gpu", "gamedev"]
categories = ["game-development", "game-engines"]

[features]
default = ["webgpu"] 
webgpu = ["dep:wgpu"]

[dependencies]
thiserror = "1.0"
pollster = "0.3"

raw-window-handle = "0.6"
wgpu = { version = "0.19", optional = true }

[lints]
workspace = true
